outputs/spx-test/eoh/2025-07-28_22-52-46/evaluations/problem_eval-1274635452672652305_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/spx/tmp/gpt_temp_7_e3fd7b6f.py", line 1
    defined as a significant change in volume relative to its recent average, and then weights these accumulations by the distance from the 20-day moving average of the closing price.}
                                                                                                                                                                                       ^
SyntaxError: unmatched '}'
